@@ -1,0 +1,6 @@
+installed_m4= system-tools-backends.m4
+
+EXTRA_DIST=$(installed_m4)
+
+m4datadir = $(datadir)/aclocal
+m4data_DATA = $(installed_m4)
