@@ -1,3 +1,10 @@
+2005-01-03  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* m4macros/system-tools-backends.m4, Makefile.am: added, for other
+	modules which may depend on this, setting STB_SCRIPTS_DIR with the
+	backends path
+	* configure.in, Makefile.am: ditto
+
 2005-01-02  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* file.pl.in (gst_file_run_backtick): modified, now it can return
